--- a/package.json
+++ b/package.json
@@ -1,16 +1,22 @@
 {
-  "name": "crawler",
-  "version": "1.0.0",
-  "description": "",
-  "main": "./dist/index.js",
-  "scripts": {
-    "start": "node ./dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "tsc"
-  },
-  "author": "Gabriel Csollei <gcsollei@hotmail.com>",
-  "license": "ISC",
-  "dependencies": {
-    "@types/node": "^8.0.31"
-  }
+    "name": "crawler",
+    "version": "1.0.0",
+    "description": "",
+    "main": "./dist/index.js",
+    "scripts": {
+        "start": "tsc && node ./dist/index.js",
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "postinstall": "tsc"
+    },
+    "author": "Gabriel Csollei <gcsollei@hotmail.com>",
+    "license": "ISC",
+    "dependencies": {
+        "@types/node": "^8.0.31",
+        "jquery": "^3.2.1",
+        "jsdom": "^11.2.0",
+        "request": "^2.83.0"
+    },
+    "devDependencies": {
+        "@types/jquery": "^3.2.12"
+    }
 }
