--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "license": "ISC",
     "dependencies": {
         "@types/node": "^8.0.31",
+        "elasticsearch": "^13.3.1",
+        "express": "^4.16.1",
         "jquery": "^3.2.1",
         "jsdom": "^11.2.0",
-        "request": "^2.83.0"
+        "request": "^2.83.0",
+        "typescript": "^2.5.3"
     },
     "devDependencies": {
         "@types/jquery": "^3.2.12"
